cards text align fixed

--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@ body {
     height: auto;
     border-radius: 5px;
     margin: 10px;
-    text-align: justify;
+    text-align: left;
     vertical-align: middle;
     padding: 5px;
     box-shadow: 1px 1px 5px 2px #555555;
